# create_images_dataset

./: .gitignore  create_dataset.py  main.py  pyproject.toml  report.aux  run_full_analysis.py
normalization_reports/: dataset_normalized_report_class_summary.csv  dataset_normalized_report_report.txt
reports/: report.aux  report.bbl  report.bib  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex
scripts/: README.md  cut_sample.py  generate_normalization_report.py  generate_normalization_report_for_normalized.py  normalize_dataset.py  test_normalizer.py  visualize_normalization.py
src/audio/: __init__.py  normalizer.py  processor.py
src/features/: spatial_extractor.py
src/images/: mosaic_generator.py
src/processing/: __init__.py  audio_cutter.py  parallel_processor.py
src/reports/: __init__.py  normalization_analyzer.py
